--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,66 +101,74 @@
           ></button>
         </div>
         <div class="container mb-3" style="background-color: #317fc3;">
-        <form class="mt-3">
+        <form class="mt-3" action="/admission" method="post">
           <!-- 2 column grid layout with text inputs for the first and last names -->
           
           <div data-mdb-input-init class="form-outline mb-4">
-            <input type="text" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Name*" />
+            <input type="text" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Name*"  name="name"/>
             <!-- <label class="form-label" for="form3Example4">Enter Name*</label> -->
           </div>
         
           <!-- Email input -->
           <div data-mdb-input-init class="form-outline mb-4">
-            <input type="email" id="form3Example3" class="form-control border-2 border-dark " placeholder="Enter Email*" />
+            <input type="email" id="form3Example3" class="form-control border-2 border-dark " placeholder="Enter Email*" name="email" />
             <!-- <label class="form-label" for="form3Example3">Enter Email Address*</label> -->
           </div>
         
           <!-- Password input -->
           <div data-mdb-input-init class="form-outline mb-4">
-            <input type="tel" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Mobile Number*" />
+            <input type="tel" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Mobile Number*" name="number" />
             <!-- <label class="form-label" for="form3Example4">Enter Mobile Number*</label> -->
           </div>
 
           <div class="row mb-4">
             <div class="col">
               <div data-mdb-input-init class="form-outline">
-                <input type="text" id="form3Example1" class="form-control  border-2 border-dark " placeholder="Enter State*" />
+                <input type="text" id="form3Example1" class="form-control  border-2 border-dark " placeholder="Enter State*"  name="studentstate"/>
                 <!-- <label class="form-label" for="form3Example1">State</label> -->
               </div>
             </div>
             <div class="col">
               <div data-mdb-input-init class="form-outline">
-                <input type="text" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter City*" />
+                <input type="text" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter City*" name="studentcity" />
                 <!-- <label class="form-label" for="form3Example2">City</label> -->
               </div>
             </div>
           </div>
 
-          <div class="row mb-4">
+          <!-- <div class="row mb-4">
             <div class="col">
               <div data-mdb-input-init class="form-outline">
                 <input type="text" id="form3Example1" class="form-control border-2 border-dark " placeholder="Enter Program*" />
-                <!-- <label class="form-label" for="form3Example1">Select Program Applying*</label> -->
-              </div>
-            </div>
-            <div class="col">
+                <label class="form-label" for="form3Example1">Select Program Applying*</label> -->
+              <!-- </div>
+            </div> -->
+
+            <div class="col mb-4">
               <div data-mdb-input-init class="form-outline">
-                <input type="text" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter Course*" />
+                <label for="course" class="fw-bold">Select Course: </label>
+                <select name="course" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter Course*">
+                  <option value="volvo">GDA Nursing Assistant</option>
+                  <option value="saab">DMLT</option>
+                  <option value="mercedes">OT Technician</option>
+                  <option value="audi">ICU Technician</option>
+                  <option value="audi">Others</option>
+                </select>
                 <!-- <label class="form-label" for="form3Example2">Enter Course*</label> -->
               </div>
             </div>
-          </div>
+        </div>
         
           <!-- Checkbox -->
-          <div class="form-check d-flex justify-content-center mb-4">
+          <!-- <div class="form-check d-flex justify-content-center mb-4">
             <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
             <label class="form-check-label text-dark" for="form2Example33">
               I agree to recieve information regarding my submitted enquiry on Tezpur Institute of Paramedical Sciences.*
             </label>
-          </div>
+          </div> -->
         
           <!-- Submit button -->
-          <button data-mdb-ripple-init type="button" class="btn btn-danger btn-block mb-4">Submit</button>
+          <button data-mdb-ripple-init type="submit" class="btn btn-danger btn-block mb-4">Submit</button>
           </div>
         </form>
         </div>
@@ -206,6 +214,11 @@
             <div class="container">
               <div class="row justify-content-start">
                 <div class="col-sm-10 col-lg-8">
+                  <% if (successMessage) { %>
+                    <div class="flash-message success px-6 py-2" style="font-size: 18px; color: orangered; ">
+                        <%= successMessage %>
+                    </div>
+                    <% } %>
                   <!-- <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5> -->
                   <h1 class="display-3 text-white fw-bold heading">
                     TEZPUR COLLEGE OF PARAMEDICAL SCIENCES
