--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -4,7 +4,7 @@
        <nav class="navbar navbar-expand-lg navbar-dark p-0">
         <a href="/"><div class="d-flex">
             <img src="/images/logotcps.png" alt="Logo" width="120" height="90" class="" />
-            <a class="navbar-brand" href="/" style="font-weight: bold !important; font-size: 50px; color: #0f4d83">TCPS</a>
+            <a class="navbar-brand" href="/" style="font-weight: bold !important; font-size: 50px; color: #0f4d83">TIPS</a>
           </div></a>
           <!-- Nav Toggle Button -->
           <button class="navbar-toggler text-secondary  my-2" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav" 
@@ -157,53 +157,52 @@
         ></button>
       </div>
       <div class="container mb-3" style="background-color: #317fc3;">
-        <form class="mt-3">
+        <form class="mt-3" action="/admission" method="post">
           <!-- 2 column grid layout with text inputs for the first and last names -->
           
           <div data-mdb-input-init class="form-outline mb-4">
-            <input type="text" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Name*" />
+            <input type="text" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Name*" name="name" />
             <!-- <label class="form-label" for="form3Example4">Enter Name*</label> -->
           </div>
         
           <!-- Email input -->
           <div data-mdb-input-init class="form-outline mb-4">
-            <input type="email" id="form3Example3" class="form-control border-2 border-dark " placeholder="Enter Email*" />
+            <input type="email" id="form3Example3" class="form-control border-2 border-dark " placeholder="Enter Email*" name="email" />
             <!-- <label class="form-label" for="form3Example3">Enter Email Address*</label> -->
           </div>
         
           <!-- Password input -->
           <div data-mdb-input-init class="form-outline mb-4">
-            <input type="tel" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Mobile Number*" />
+            <input type="tel" id="form3Example4" class="form-control border-2 border-dark " placeholder="Enter Mobile Number*" name="number" />
             <!-- <label class="form-label" for="form3Example4">Enter Mobile Number*</label> -->
           </div>
 
           <div class="row mb-4">
             <div class="col">
               <div data-mdb-input-init class="form-outline">
-                <input type="text" id="form3Example1" class="form-control  border-2 border-dark " placeholder="Enter State*" />
+                <input type="text" id="form3Example1" class="form-control  border-2 border-dark " placeholder="Enter State*" name="studentstate" />
                 <!-- <label class="form-label" for="form3Example1">State</label> -->
               </div>
             </div>
             <div class="col">
               <div data-mdb-input-init class="form-outline">
-                <input type="text" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter City*" />
+                <input type="text" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter City*" name="studentcity" />
                 <!-- <label class="form-label" for="form3Example2">City</label> -->
               </div>
             </div>
           </div>
 
-          <div class="row mb-4">
-            <div class="col">
-              <div data-mdb-input-init class="form-outline">
-                <input type="text" id="form3Example1" class="form-control border-2 border-dark " placeholder="Enter Program*" />
-                <!-- <label class="form-label" for="form3Example1">Select Program Applying*</label> -->
-              </div>
-            </div>
-            <div class="col">
-              <div data-mdb-input-init class="form-outline">
-                <input type="text" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter Course*" />
-                <!-- <label class="form-label" for="form3Example2">Enter Course*</label> -->
-              </div>
+          <div class="col mb-4">
+            <div data-mdb-input-init class="form-outline">
+              <label for="course" class="fw-bold">Select Course: </label>
+              <select name="course" id="form3Example2" class="form-control border-2 border-dark " placeholder="Enter Course*" >
+                <option value="volvo">GDA Nursing Assistant</option>
+                <option value="saab">DMLT</option>
+                <option value="mercedes">OT Technician</option>
+                <option value="audi">ICU Technician</option>
+                <option value="audi">Others</option>
+              </select>
+              <!-- <label class="form-label" for="form3Example2">Enter Course*</label> -->
             </div>
           </div>
         
